[package]
name = "crust"
version = "1.0.0"
authors = ["inyragvar"]
edition = "2024"

[lib]
name = "crustlib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "crust"
path = "src/bin.rs"

[dependencies]
libc = "0.2.88" # Note iOS targets won't compile without this.
gl = "0.14.0"
tobj = "4.0.3"
glm = "0.2.3"
sdl2-sys = "0.37.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image"]